ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-ingress-alvaro
  annotations:
    traefik.ingress.kubernetes.io/affinity: "true"
spec:
  rules:
  - host: app.alvaro.nip.io
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: python-svc-alvaro
            port:
              number: 80
